Changes based on lint-checking using FindBugs.